# duckdb-ds

./: .gitignore  ARCHITECTURE.md  Dockerfile  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFERENCE.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_duckdb_service.py  test_qlib_service.py  vercel.json
data/: __init__.py  seed.py
docs/: AlphaEval.md  MARKET_DATA_API_DESIGN.md
examples/: CURL_EXAMPLES.sh  __init__.py  client.py
security/: __init__.py  sql_features.py  sql_parser.py  sql_validator.py
services/: __init__.py  data_query.py  duckdb_service.py  feature_handler_adapter.py  feature_manager.py  market_data_service.py  qlib_service.py
